<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundWhite"
    android:padding="@dimen/dimen_big_16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/stat_img4"
            android:layout_width="@dimen/min_height_info_200dp"
            android:layout_height="@dimen/min_height_info_200dp"
            android:adjustViewBounds="true"
            android:src="@drawable/layout4x4_o"
            android:layout_marginBottom="@dimen/dimen_big_16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/dimen_weight"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/tv_stat"
                    android:text="@string/Stat_High_Number" />

                <TextView
                    android:id="@+id/highest_number4"
                    style="@style/tv_stat_value"
                    android:text="0" />

                <TextView
                    style="@style/tv_stat"
                    android:text="@string/Stat_Amount_Undo" />

                <TextView
                    android:id="@+id/undo_number4"
                    style="@style/tv_stat_value"
                    android:text="0" />


                <TextView
                    style="@style/tv_stat"
                    android:text="@string/Stat_Time" />

                <TextView
                    android:id="@+id/time_played4"
                    style="@style/tv_stat_value"
                    android:text="0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/dimen_weight"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/tv_stat"
                    android:text="@string/Stat_High_Point" />

                <TextView
                    android:id="@+id/highest_score4"
                    style="@style/tv_stat_value"
                    android:text="0"
                    android:textColor="@color/colorPrimary"/>


                <TextView
                    style="@style/tv_stat"
                    android:text="@string/Stat_Amount_Swipe" />

                <TextView
                    android:id="@+id/moves_All4"
                    style="@style/tv_stat_value"
                    android:text="0" />

                <TextView
                    style="@style/tv_stat"
                    android:text="@string/Stat_Time_Swipes" />

                <TextView
                    android:id="@+id/time_swipes4"
                    style="@style/tv_stat_value"
                    android:text="0" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>